labwork/2026-05-15-Kubernetes/kubernetes-ingress/02-kubernetes-ingress-http/http_retail_store_k8s_manifests-vpw/06_ingress/02_ingress_http_ip_mode-vpw.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-http-ip-mode-vpw
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: vpw-store-http-ip-mode
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/subnets: subnet-014ab62fcab251723,subnet-09156b9f3b59eeb25
spec:
  ingressClassName: alb 
  defaultBackend:
    service:
      name: ui-vpw
      port:
        number: 80
